Completed DP and MC exercises

--- a/DP/Policy Evaluation.ipynb
+++ b/DP/Policy Evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -28,13 +28,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def policy_eval(policy, env, discount_factor=1.0, theta=0.00001):\n",
+    "def policy_eval_naive(policy, env, discount_factor=1.0, theta=0.00001):\n",
     "    \"\"\"\n",
     "    Evaluate a policy given an environment and a full description of the environment's dynamics.\n",
     "    \n",
@@ -51,44 +51,107 @@
     "    # Start with a random (all 0) value function\n",
     "    V = np.zeros(env.nS)\n",
     "    while True:\n",
-    "        # TODO: Implement!\n",
-    "        break\n",
+    "        V_next = V.copy()\n",
+    "        \n",
+    "        for state in range(env.nS):\n",
+    "            value = 0.0\n",
+    "            actions = env.P[state]\n",
+    "            for action, v in actions.items():\n",
+    "                prob, next_state, reward, done = v[0]\n",
+    "                value += policy[state][action] * (reward + discount_factor * prob * V[next_state])\n",
+    "            V_next[state] = value\n",
+    "        \n",
+    "        if np.all((V - V_next < theta)):\n",
+    "            break\n",
+    "            \n",
+    "        V = V_next\n",
+    "            \n",
     "    return np.array(V)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "random_policy = np.ones([env.nS, env.nA]) / env.nA\n",
-    "v = policy_eval(random_policy, env)"
+    "def policy_eval_fast(policy, env, discount_factor=1.0, theta=0.00001):\n",
+    "    \"\"\"\n",
+    "    Evaluate a policy given an environment and a full description of the environment's dynamics.\n",
+    "    \n",
+    "    Args:\n",
+    "        policy: [S, A] shaped matrix representing the policy.\n",
+    "        env: OpenAI env. env.P represents the transition probabilities of the environment.\n",
+    "            env.P[s][a] is a (prob, next_state, reward, done) tuple.\n",
+    "        theta: We stop evaluation once our value function change is less than theta for all states.\n",
+    "        discount_factor: gamma discount factor.\n",
+    "    \n",
+    "    Returns:\n",
+    "        Vector of length env.nS representing the value function.\n",
+    "    \"\"\"\n",
+    "    # Start with a random (all 0) value function\n",
+    "    V = np.zeros(env.nS)\n",
+    "    \n",
+    "    R = np.zeros((env.nS, env.nA))\n",
+    "    P = np.zeros((env.nS, env.nS))\n",
+    "    for state in range(env.nS):\n",
+    "        actions = env.P[state]\n",
+    "        tmp = np.zeros(env.nS)\n",
+    "        for action, v in actions.items():\n",
+    "            prob, next_state, reward, _ = v[0]\n",
+    "            P[state][next_state] = prob\n",
+    "            R[state][action] = reward\n",
+    "\n",
+    "    R_p = (R * policy).sum(axis=1)\n",
+    "    \n",
+    "    it = 0\n",
+    "    while True:\n",
+    "        next_V = R_p + discount_factor * P.dot(V)    \n",
+    "        \n",
+    "#         if np.all((V - next_V < theta)):\n",
+    "#             V = next_V\n",
+    "#             break\n",
+    "            \n",
+    "        it += 1\n",
+    "        if it == 2:\n",
+    "            print(next_V)\n",
+    "            break\n",
+    "            \n",
+    "        V = next_V.copy()\n",
+    "            \n",
+    "    return np.array(V)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "AssertionError",
-     "evalue": "\nArrays are not almost equal to 2 decimals\n\n(mismatch 87.5%)\n x: array([ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n        0.,  0.,  0.])\n y: array([  0, -14, -20, -22, -14, -18, -20, -20, -20, -20, -18, -14, -22,\n       -20, -14,   0])",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-22-235f39fb115c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Test: Make sure the evaluated policy is what we expected\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mexpected_v\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m14\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m22\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m14\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m18\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m18\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m14\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m22\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m14\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtesting\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0massert_array_almost_equal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexpected_v\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdecimal\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/Users/dennybritz/venvs/tf/lib/python3.5/site-packages/numpy/testing/utils.py\u001b[0m in \u001b[0;36massert_array_almost_equal\u001b[0;34m(x, y, decimal, err_msg, verbose)\u001b[0m\n\u001b[1;32m    914\u001b[0m     assert_array_compare(compare, x, y, err_msg=err_msg, verbose=verbose,\n\u001b[1;32m    915\u001b[0m              \u001b[0mheader\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Arrays are not almost equal to %d decimals'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mdecimal\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 916\u001b[0;31m              precision=decimal)\n\u001b[0m\u001b[1;32m    917\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    918\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/dennybritz/venvs/tf/lib/python3.5/site-packages/numpy/testing/utils.py\u001b[0m in \u001b[0;36massert_array_compare\u001b[0;34m(comparison, x, y, err_msg, verbose, header, precision)\u001b[0m\n\u001b[1;32m    735\u001b[0m                                 names=('x', 'y'), precision=precision)\n\u001b[1;32m    736\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mcond\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 737\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mAssertionError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    738\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    739\u001b[0m         \u001b[0;32mimport\u001b[0m \u001b[0mtraceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: \nArrays are not almost equal to 2 decimals\n\n(mismatch 87.5%)\n x: array([ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n        0.,  0.,  0.])\n y: array([  0, -14, -20, -22, -14, -18, -20, -20, -20, -20, -18, -14, -22,\n       -20, -14,   0])"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-2.25 -6.75 -8.75 -7.5  -5.25 -7.5  -8.5  -8.75 -6.5  -8.5  -7.5  -6.75\n",
+      " -5.25 -7.25 -6.25 -2.75]\n"
      ]
     }
    ],
+   "source": [
+    "random_policy = np.ones([env.nS, env.nA]) / env.nA\n",
+    "v = policy_eval_fast(random_policy, env)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "# Test: Make sure the evaluated policy is what we expected\n",
     "expected_v = np.array([0, -14, -20, -22, -14, -18, -20, -20, -20, -20, -18, -14, -22, -20, -14, 0])\n",
@@ -121,7 +184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
