--- a/MC/Blackjack Playground.ipynb
+++ b/MC/Blackjack Playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 419,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 420,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 422,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -37,143 +37,131 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Player Score: 17 (Usable Ace: False), Dealer Score: 10\n",
-      "Taking action: Hit\n",
-      "Player Score: 18 (Usable Ace: False), Dealer Score: 10\n",
-      "Taking action: Hit\n",
-      "Player Score: 28 (Usable Ace: False), Dealer Score: 10\n",
-      "Game end. Reward: -1.0\n",
-      "\n",
-      "Player Score: 6 (Usable Ace: False), Dealer Score: 9\n",
-      "Taking action: Hit\n",
-      "Player Score: 16 (Usable Ace: False), Dealer Score: 9\n",
-      "Taking action: Hit\n",
-      "Player Score: 26 (Usable Ace: False), Dealer Score: 9\n",
-      "Game end. Reward: -1.0\n",
-      "\n",
-      "Player Score: 12 (Usable Ace: False), Dealer Score: 6\n",
-      "Taking action: Hit\n",
-      "Player Score: 21 (Usable Ace: False), Dealer Score: 6\n",
-      "Taking action: Stick\n",
-      "Player Score: 21 (Usable Ace: False), Dealer Score: 6\n",
-      "Game end. Reward: 1.0\n",
-      "\n",
-      "Player Score: 17 (Usable Ace: True), Dealer Score: 8\n",
-      "Taking action: Hit\n",
-      "Player Score: 17 (Usable Ace: False), Dealer Score: 8\n",
-      "Taking action: Hit\n",
-      "Player Score: 22 (Usable Ace: False), Dealer Score: 8\n",
-      "Game end. Reward: -1.0\n",
-      "\n",
-      "Player Score: 17 (Usable Ace: False), Dealer Score: 8\n",
-      "Taking action: Hit\n",
-      "Player Score: 27 (Usable Ace: False), Dealer Score: 8\n",
-      "Game end. Reward: -1.0\n",
-      "\n",
-      "Player Score: 16 (Usable Ace: False), Dealer Score: 10\n",
-      "Taking action: Hit\n",
-      "Player Score: 19 (Usable Ace: False), Dealer Score: 10\n",
-      "Taking action: Hit\n",
-      "Player Score: 28 (Usable Ace: False), Dealer Score: 10\n",
-      "Game end. Reward: -1.0\n",
-      "\n",
-      "Player Score: 13 (Usable Ace: False), Dealer Score: 7\n",
-      "Taking action: Hit\n",
-      "Player Score: 14 (Usable Ace: False), Dealer Score: 7\n",
-      "Taking action: Hit\n",
-      "Player Score: 24 (Usable Ace: False), Dealer Score: 7\n",
-      "Game end. Reward: -1.0\n",
-      "\n",
-      "Player Score: 17 (Usable Ace: False), Dealer Score: 5\n",
-      "Taking action: Hit\n",
-      "Player Score: 25 (Usable Ace: False), Dealer Score: 5\n",
-      "Game end. Reward: -1.0\n",
-      "\n",
-      "Player Score: 20 (Usable Ace: False), Dealer Score: 5\n",
-      "Taking action: Stick\n",
-      "Player Score: 20 (Usable Ace: False), Dealer Score: 5\n",
-      "Game end. Reward: 1.0\n",
-      "\n",
-      "Player Score: 12 (Usable Ace: True), Dealer Score: 10\n",
-      "Taking action: Hit\n",
-      "Player Score: 20 (Usable Ace: True), Dealer Score: 10\n",
-      "Taking action: Stick\n",
-      "Player Score: 20 (Usable Ace: True), Dealer Score: 10\n",
-      "Game end. Reward: 0.0\n",
-      "\n",
-      "Player Score: 12 (Usable Ace: False), Dealer Score: 10\n",
-      "Taking action: Hit\n",
-      "Player Score: 19 (Usable Ace: False), Dealer Score: 10\n",
-      "Taking action: Hit\n",
-      "Player Score: 24 (Usable Ace: False), Dealer Score: 10\n",
-      "Game end. Reward: -1.0\n",
-      "\n",
-      "Player Score: 19 (Usable Ace: False), Dealer Score: 4\n",
-      "Taking action: Hit\n",
-      "Player Score: 22 (Usable Ace: False), Dealer Score: 4\n",
-      "Game end. Reward: -1.0\n",
-      "\n",
-      "Player Score: 16 (Usable Ace: False), Dealer Score: 10\n",
-      "Taking action: Hit\n",
-      "Player Score: 20 (Usable Ace: False), Dealer Score: 10\n",
-      "Taking action: Stick\n",
-      "Player Score: 20 (Usable Ace: False), Dealer Score: 10\n",
-      "Game end. Reward: 0.0\n",
-      "\n",
-      "Player Score: 4 (Usable Ace: False), Dealer Score: 3\n",
-      "Taking action: Hit\n",
-      "Player Score: 14 (Usable Ace: False), Dealer Score: 3\n",
-      "Taking action: Hit\n",
-      "Player Score: 24 (Usable Ace: False), Dealer Score: 3\n",
-      "Game end. Reward: -1.0\n",
-      "\n",
-      "Player Score: 21 (Usable Ace: True), Dealer Score: 10\n",
-      "Taking action: Stick\n",
-      "Player Score: 21 (Usable Ace: True), Dealer Score: 10\n",
-      "Game end. Reward: 1.0\n",
-      "\n",
-      "Player Score: 16 (Usable Ace: True), Dealer Score: 10\n",
-      "Taking action: Hit\n",
-      "Player Score: 12 (Usable Ace: False), Dealer Score: 10\n",
-      "Taking action: Hit\n",
-      "Player Score: 20 (Usable Ace: False), Dealer Score: 10\n",
-      "Taking action: Stick\n",
-      "Player Score: 20 (Usable Ace: False), Dealer Score: 10\n",
-      "Game end. Reward: 1.0\n",
-      "\n",
-      "Player Score: 9 (Usable Ace: False), Dealer Score: 10\n",
-      "Taking action: Hit\n",
       "Player Score: 19 (Usable Ace: False), Dealer Score: 10\n",
       "Taking action: Hit\n",
       "Player Score: 26 (Usable Ace: False), Dealer Score: 10\n",
       "Game end. Reward: -1.0\n",
       "\n",
-      "Player Score: 12 (Usable Ace: False), Dealer Score: 5\n",
+      "Player Score: 18 (Usable Ace: False), Dealer Score: 10\n",
       "Taking action: Hit\n",
-      "Player Score: 15 (Usable Ace: False), Dealer Score: 5\n",
+      "Player Score: 28 (Usable Ace: False), Dealer Score: 10\n",
+      "Game end. Reward: -1.0\n",
+      "\n",
+      "Player Score: 19 (Usable Ace: False), Dealer Score: 4\n",
       "Taking action: Hit\n",
-      "Player Score: 21 (Usable Ace: False), Dealer Score: 5\n",
+      "Player Score: 20 (Usable Ace: False), Dealer Score: 4\n",
       "Taking action: Stick\n",
-      "Player Score: 21 (Usable Ace: False), Dealer Score: 5\n",
+      "Player Score: 20 (Usable Ace: False), Dealer Score: 4\n",
       "Game end. Reward: 1.0\n",
       "\n",
-      "Player Score: 11 (Usable Ace: False), Dealer Score: 9\n",
+      "Player Score: 14 (Usable Ace: True), Dealer Score: 4\n",
       "Taking action: Hit\n",
-      "Player Score: 13 (Usable Ace: False), Dealer Score: 9\n",
+      "Player Score: 17 (Usable Ace: True), Dealer Score: 4\n",
       "Taking action: Hit\n",
-      "Player Score: 17 (Usable Ace: False), Dealer Score: 9\n",
+      "Player Score: 17 (Usable Ace: False), Dealer Score: 4\n",
       "Taking action: Hit\n",
+      "Player Score: 27 (Usable Ace: False), Dealer Score: 4\n",
+      "Game end. Reward: -1.0\n",
+      "\n",
+      "Player Score: 20 (Usable Ace: False), Dealer Score: 10\n",
+      "Taking action: Stick\n",
+      "Player Score: 20 (Usable Ace: False), Dealer Score: 10\n",
+      "Game end. Reward: 1.0\n",
+      "\n",
+      "Player Score: 21 (Usable Ace: True), Dealer Score: 10\n",
+      "Taking action: Stick\n",
+      "Player Score: 21 (Usable Ace: True), Dealer Score: 10\n",
+      "Game end. Reward: 1.0\n",
+      "\n",
+      "Player Score: 13 (Usable Ace: False), Dealer Score: 10\n",
+      "Taking action: Hit\n",
+      "Player Score: 14 (Usable Ace: False), Dealer Score: 10\n",
+      "Taking action: Hit\n",
+      "Player Score: 17 (Usable Ace: False), Dealer Score: 10\n",
+      "Taking action: Hit\n",
+      "Player Score: 18 (Usable Ace: False), Dealer Score: 10\n",
+      "Taking action: Hit\n",
+      "Player Score: 24 (Usable Ace: False), Dealer Score: 10\n",
+      "Game end. Reward: -1.0\n",
+      "\n",
+      "Player Score: 21 (Usable Ace: True), Dealer Score: 8\n",
+      "Taking action: Stick\n",
+      "Player Score: 21 (Usable Ace: True), Dealer Score: 8\n",
+      "Game end. Reward: 1.0\n",
+      "\n",
+      "Player Score: 16 (Usable Ace: False), Dealer Score: 3\n",
+      "Taking action: Hit\n",
+      "Player Score: 23 (Usable Ace: False), Dealer Score: 3\n",
+      "Game end. Reward: -1.0\n",
+      "\n",
+      "Player Score: 14 (Usable Ace: False), Dealer Score: 2\n",
+      "Taking action: Hit\n",
+      "Player Score: 20 (Usable Ace: False), Dealer Score: 2\n",
+      "Taking action: Stick\n",
+      "Player Score: 20 (Usable Ace: False), Dealer Score: 2\n",
+      "Game end. Reward: -1.0\n",
+      "\n",
+      "Player Score: 20 (Usable Ace: False), Dealer Score: 9\n",
+      "Taking action: Stick\n",
+      "Player Score: 20 (Usable Ace: False), Dealer Score: 9\n",
+      "Game end. Reward: 1.0\n",
+      "\n",
       "Player Score: 19 (Usable Ace: False), Dealer Score: 9\n",
       "Taking action: Hit\n",
       "Player Score: 29 (Usable Ace: False), Dealer Score: 9\n",
       "Game end. Reward: -1.0\n",
       "\n",
-      "Player Score: 14 (Usable Ace: False), Dealer Score: 7\n",
+      "Player Score: 13 (Usable Ace: False), Dealer Score: 8\n",
       "Taking action: Hit\n",
-      "Player Score: 19 (Usable Ace: False), Dealer Score: 7\n",
-      "Taking action: Hit\n",
-      "Player Score: 29 (Usable Ace: False), Dealer Score: 7\n",
+      "Player Score: 23 (Usable Ace: False), Dealer Score: 8\n",
       "Game end. Reward: -1.0\n",
+      "\n",
+      "Player Score: 20 (Usable Ace: False), Dealer Score: 10\n",
+      "Taking action: Stick\n",
+      "Player Score: 20 (Usable Ace: False), Dealer Score: 10\n",
+      "Game end. Reward: 0.0\n",
+      "\n",
+      "Player Score: 21 (Usable Ace: True), Dealer Score: 5\n",
+      "Taking action: Stick\n",
+      "Player Score: 21 (Usable Ace: True), Dealer Score: 5\n",
+      "Game end. Reward: 1.0\n",
+      "\n",
+      "Player Score: 12 (Usable Ace: False), Dealer Score: 3\n",
+      "Taking action: Hit\n",
+      "Player Score: 21 (Usable Ace: False), Dealer Score: 3\n",
+      "Taking action: Stick\n",
+      "Player Score: 21 (Usable Ace: False), Dealer Score: 3\n",
+      "Game end. Reward: 1.0\n",
+      "\n",
+      "Player Score: 16 (Usable Ace: True), Dealer Score: 5\n",
+      "Taking action: Hit\n",
+      "Player Score: 19 (Usable Ace: True), Dealer Score: 5\n",
+      "Taking action: Hit\n",
+      "Player Score: 18 (Usable Ace: False), Dealer Score: 5\n",
+      "Taking action: Hit\n",
+      "Player Score: 28 (Usable Ace: False), Dealer Score: 5\n",
+      "Game end. Reward: -1.0\n",
+      "\n",
+      "Player Score: 12 (Usable Ace: False), Dealer Score: 4\n",
+      "Taking action: Hit\n",
+      "Player Score: 14 (Usable Ace: False), Dealer Score: 4\n",
+      "Taking action: Hit\n",
+      "Player Score: 17 (Usable Ace: False), Dealer Score: 4\n",
+      "Taking action: Hit\n",
+      "Player Score: 27 (Usable Ace: False), Dealer Score: 4\n",
+      "Game end. Reward: -1.0\n",
+      "\n",
+      "Player Score: 21 (Usable Ace: True), Dealer Score: 9\n",
+      "Taking action: Stick\n",
+      "Player Score: 21 (Usable Ace: True), Dealer Score: 9\n",
+      "Game end. Reward: 1.0\n",
+      "\n",
+      "Player Score: 16 (Usable Ace: False), Dealer Score: 10\n",
+      "Taking action: Hit\n",
+      "Player Score: 20 (Usable Ace: False), Dealer Score: 10\n",
+      "Taking action: Stick\n",
+      "Player Score: 20 (Usable Ace: False), Dealer Score: 10\n",
+      "Game end. Reward: 1.0\n",
       "\n"
      ]
     }
@@ -186,7 +174,7 @@
     "\n",
     "def strategy(observation):\n",
     "    score, dealer_score, usable_ace = observation\n",
-    "    # Stick (action 0) if the score is > 20, hit (action 1) otherwise\n",
+    "    # Stick (action 0) if the score is >= 20, hit (action 1) otherwise\n",
     "    return 0 if score >= 20 else 1\n",
     "\n",
     "for i_episode in range(20):\n",
@@ -201,6 +189,15 @@
     "            print(\"Game end. Reward: {}\\n\".format(float(reward)))\n",
     "            break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -219,7 +216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
