Fixed MC Prediction to properly only account first-visit. This does not matter for Blackjack because states can't repeat.

--- a/MC/Off-Policy MC Control with Weighted Importance Sampling.ipynb
+++ b/MC/Off-Policy MC Control with Weighted Importance Sampling.ipynb
@@ -151,10 +151,9 @@
     "        # all actions. This is coverage. All that is needed is a way of\n",
     "        # estimating the Value of the target_policy while using the \n",
     "        # behavior_policy. To do this we scale the value by the relative\n",
-    "        # probability of the trajectory under the and behavior policies.\n",
+    "        # probability of the trajectory under the target_policy.\n",
     "        \n",
     "        # Incremental implementation of weighted importance sampling.\n",
-    "        \n",
     "        G = 0.0\n",
     "        W = 1.0\n",
     "        for t in range(len(episode))[::-1]:\n",
