--- a/TD/Windy Gridworld Playground.ipynb
+++ b/TD/Windy Gridworld Playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -38,6 +38,7 @@
       "o  o  o  o  o  o  o  o  o  o\n",
       "o  o  o  o  o  o  o  o  o  o\n",
       "\n",
+      "Step 1\n",
       "(31, -1.0, False, {'prob': 1.0})\n",
       "o  o  o  o  o  o  o  o  o  o\n",
       "o  o  o  o  o  o  o  o  o  o\n",
@@ -47,6 +48,7 @@
       "o  o  o  o  o  o  o  o  o  o\n",
       "o  o  o  o  o  o  o  o  o  o\n",
       "\n",
+      "Step 1\n",
       "(32, -1.0, False, {'prob': 1.0})\n",
       "o  o  o  o  o  o  o  o  o  o\n",
       "o  o  o  o  o  o  o  o  o  o\n",
@@ -56,6 +58,7 @@
       "o  o  o  o  o  o  o  o  o  o\n",
       "o  o  o  o  o  o  o  o  o  o\n",
       "\n",
+      "Step 1\n",
       "(33, -1.0, False, {'prob': 1.0})\n",
       "o  o  o  o  o  o  o  o  o  o\n",
       "o  o  o  o  o  o  o  o  o  o\n",
@@ -65,6 +68,7 @@
       "o  o  o  o  o  o  o  o  o  o\n",
       "o  o  o  o  o  o  o  o  o  o\n",
       "\n",
+      "Step 2\n",
       "(33, -1.0, False, {'prob': 1.0})\n",
       "o  o  o  o  o  o  o  o  o  o\n",
       "o  o  o  o  o  o  o  o  o  o\n",
@@ -74,6 +78,7 @@
       "o  o  o  o  o  o  o  o  o  o\n",
       "o  o  o  o  o  o  o  o  o  o\n",
       "\n",
+      "Step 1\n",
       "(24, -1.0, False, {'prob': 1.0})\n",
       "o  o  o  o  o  o  o  o  o  o\n",
       "o  o  o  o  o  o  o  o  o  o\n",
@@ -83,6 +88,7 @@
       "o  o  o  o  o  o  o  o  o  o\n",
       "o  o  o  o  o  o  o  o  o  o\n",
       "\n",
+      "Step 1\n",
       "(15, -1.0, False, {'prob': 1.0})\n",
       "o  o  o  o  o  o  o  o  o  o\n",
       "o  o  o  o  o  x  o  o  o  o\n",
@@ -101,24 +107,39 @@
     "print(env.reset())\n",
     "env.render()\n",
     "\n",
+    "print('Step 1')\n",
     "print(env.step(1))\n",
     "env.render()\n",
     "\n",
+    "print('Step 1')\n",
     "print(env.step(1))\n",
     "env.render()\n",
     "\n",
+    "print('Step 1')\n",
     "print(env.step(1))\n",
     "env.render()\n",
     "\n",
+    "print('Step 2')\n",
     "print(env.step(2))\n",
     "env.render()\n",
     "\n",
+    "print('Step 1')\n",
     "print(env.step(1))\n",
     "env.render()\n",
     "\n",
+    "print('Step 1')\n",
     "print(env.step(1))\n",
     "env.render()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -137,7 +158,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
